# sdl-awesomeness

./: CMakeLists.txt  README.md  main.h
code/src/main/: main.cpp  telemetry.cpp  telemetry.h
code/src/main/geometry/: Vertex.cpp  Vertex.h
code/src/main/math/: Vector.cpp  Vector.h
code/src/main/rendering/: Camera.cpp  Camera.h
code/src/main/util/: Convert.cpp  Convert.h  RollingAverage.cpp  RollingAverage.h  Telemetry.cpp  Telemetry.h  telemetry.cpp  telemetry.h
